--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,9 @@
 html{
     font-size: 62.5%;
 }
+*{
+    box-sizing: border-box;
+}
 body{
     font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
