--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root{
-
+    --primary: #fe2c55;
+    --black: #000;
+    --text-color: #333;
 }
 html{
     font-size: 62.5%;
@@ -17,4 +19,13 @@ body{
     font-family: "Roboto", sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+input,button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+a[href]{
+    color: var(--text-color);
+    text-decoration: none;
 }
