--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper{
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width: 52px;
     height: 60px;
     box-shadow: 0 1px 1px rgb(0 0 0 / 12%);
     display: flex;
@@ -7,5 +11,65 @@
 .inner{
     width: 1150px;
     height: 100%;
-    background-color: #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search{
+    position: relative;
+    width: 361px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    height: var(--search-height);
+    border: 1.5px solid transparent;
+    display: flex;
+    padding-left: 16px;
+    caret-color: var(--primary);
+    input{
+        flex: 1;
+        height: 100%;
+        color: var(--black);
+    }
+    input:not(:placeholder-shown) ~ .search-btn{
+        color: rgba(22, 24, 35, 0.75);
+    }
+    &:focus-within{
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+    &::after{
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        background-color: rgba(22, 24, 35, 0.12);
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
+    }
+}
+.clear,
+.loading{
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+
+}
+.search-btn{
+    width: var(--search-button-width);
+    height: 100%;
+    color: rgba(22, 24, 35, 0.34);
+    font-size: 1.8rem;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    &:hover{
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+.actions{
+
 }
