--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -1,10 +1,11 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 :root{
     --primary: #fe2c55;
     --black: #000;
     --text-color: #333;
+    --white: #fff;
 }
 html{
     font-size: 62.5%;
@@ -16,7 +17,7 @@ html{
 }
 body{
     font-size: 1.6rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "ProximaNova", sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
 }
@@ -28,4 +29,45 @@ input,button {
 a[href]{
     color: var(--text-color);
     text-decoration: none;
+}
+// Custom tooltip
+
+body {
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px 9px;
+    }
+    .tippy-box[data-placement^='bottom'] > .tippy-arrow:before {
+        top: -8px;
+    }
+}
+// Fonts
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('../../assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+@font-face {
+    font-family: SofiaPro;
+    src: url('../../assets/fonts/sofiapro-bold.woff');
+    font-weight: 700;
 }
