--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -15,61 +15,43 @@
     align-items: center;
     justify-content: space-between;
 }
-
-.search{
-    position: relative;
-    width: 361px;
-    background-color: rgba(22, 24, 35, 0.06);
-    border-radius: var(--search-border-radius);
-    height: var(--search-height);
-    border: 1.5px solid transparent;
-    display: flex;
-    padding-left: 16px;
-    caret-color: var(--primary);
-    input{
-        flex: 1;
-        height: 100%;
-        color: var(--black);
-    }
-    input:not(:placeholder-shown) ~ .search-btn{
-        color: rgba(22, 24, 35, 0.75);
-    }
-    &:focus-within{
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-    &::after{
-        content: "";
-        position: absolute;
-        width: 1px;
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        background-color: rgba(22, 24, 35, 0.12);
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-    }
-}
-.clear,
-.loading{
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-
-}
-.search-btn{
-    width: var(--search-button-width);
-    height: 100%;
-    color: rgba(22, 24, 35, 0.34);
-    font-size: 1.8rem;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    &:hover{
-        cursor: pointer;
-        background-color: rgba(22, 24, 35, 0.03);
-    }
-    &:active {
-        background-color: rgba(22, 24, 35, 0.06);
-    }
-}
 .actions{
-
+    display: flex;
+    align-items: center;
+}
+.more-btn{
+    font-size: 2rem;
+    margin-left: 16px;
+    padding: 4px 8px;
+    background-color: transparent;
+}
+.user-avatar{
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 14px;
+    cursor: pointer;
+}
+.action-btn{
+    position: relative;
+    display: flex;
+    padding: 4px 10px;
+    font-size: 2.2rem;
+    color: #161823;
+    background-color: transparent;
+    cursor: pointer;
+    .badge{
+        position: absolute;
+        top: -3px;
+        right: 0px;
+        padding: 0px 6px;
+        height: 2rem;
+        line-height: 2rem;
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: var(--white);
+        border-radius: 10px;
+        background-color: var(--primary);
+    }
 }
