--- a/src/Components/GlobalStyles/GlobalStyles.scss
+++ b/src/Components/GlobalStyles/GlobalStyles.scss
@@ -20,6 +20,7 @@ body{
     font-family: "ProximaNova", sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    overflow-y: overlay;
 }
 input,button {
     border: none;
@@ -29,6 +30,7 @@ input,button {
 a[href]{
     color: var(--text-color);
     text-decoration: none;
+    font-family: "ProximaNova", sans-serif;
 }
 // Custom tooltip
 
@@ -70,4 +72,29 @@ body {
     font-family: SofiaPro;
     src: url('../../assets/fonts/sofiapro-bold.woff');
     font-weight: 700;
+}
+// Scrollbar CSS
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
