--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -25,6 +25,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 .back-btn{
     width: 50px;
@@ -37,4 +38,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+.menu-scroll{
+    overflow-y: auto;
 }
