--- a/src/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,6 +1,8 @@
 .wrapper{
     display: flex;
     justify-content: center;
+    margin-top: 60px;
+    padding: 0 50px;
 }
 .container{
    width: 1150px;
