--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -7,6 +7,13 @@
     box-shadow: 0 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
+    padding: 0 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background-color: var(--white);
 }
 .inner{
     width: 1150px;
